<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teach_and_repeat</name>
  <version>0.0.0</version>
  <description>
    This package implements visual teach and repeat algorithms to record a path,
    and be able to follow that again at later times.
  </description>
  <maintainer email="nathans@glidance.io">nathan</maintainer>
  <license>BSD-2-Clause</license>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>


  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>teach_and_repeat_interfaces</build_depend>
  <build_depend>dbow2</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>teach_and_repeat_interfaces</exec_depend>
  <exec_depend>dbow2</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
