<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teach_and_repeat_interfaces</name>
  <version>0.0.0</version>
  <description>Interface definitions for teach_and_repeat system</description>
  <maintainer email="nathans@glidance.io">nathan</maintainer>
  <license>BSD-2-Clause</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies for interface generation and usage -->
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- ROSIDL group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
